--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,9 +4,9 @@
 	"private": true,
 	"description": "Documentation for Premid",
 	"scripts": {
-		"docs:dev": "vitepress dev",
-		"docs:build": "vitepress build",
-		"docs:preview": "vitepress preview"
+		"dev": "vitepress dev",
+		"build": "vitepress build",
+		"preview": "vitepress preview"
 	},
 	"devDependencies": {
 		"vitepress": "1.3.1"
