--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
 		"test:ui": "vitest --ui"
 	},
 	"devDependencies": {
-		"@antfu/eslint-config": "^2.22.4",
-		"@commitlint/cli": "^18.6.0",
-		"@recodive/configs": "^1.7.5",
+		"@antfu/eslint-config": "^2.23.0",
+		"@commitlint/cli": "^19.3.0",
+		"@commitlint/config-conventional": "^19.2.2",
 		"@types/node": "^20.11.17",
 		"@unocss/eslint-plugin": "^0.61.4",
 		"@vitest/coverage-v8": "^2.0.2",
