chore: update CI workflow to trigger on 'monorepo' branch

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,9 @@
 name: Build, Lint and Test
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - monorepo
+  pull_request:
 jobs:
   build:
     name: Build, Lint and Test
