--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -35,9 +35,10 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          target: ${{ matrix.target }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: SERVICE=${{ matrix.target }}
+          target: website
           tags: ghcr.io/premid/${{ matrix.target }}:beta-${{ github.sha }}-${{ github.run_number }}
 
       - name: Get package.json version
@@ -52,7 +53,8 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          target: ${{ matrix.target }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          target: prod
+          build-args: SERVICE=${{ matrix.target }}
           tags: ghcr.io/premid/${{ matrix.target }}:latest,ghcr.io/premid/${{ matrix.target }}:${{ steps.get_version.outputs.version }}
