chore: change dest in crowdin

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,4 @@
 files:
   - source: /apps/website/locales
     translation: /apps/website/locales/%two_letters_code%/%original_file_name%
+    dest: website/%original_file_name%
