chore: improve crowdin pr

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,6 @@
+pull_request_title: "chore: Update Crowdin translations"
+commit_message: "chore(%language%): Update %original_file_name% translation from Crowdin"
+
 files:
   - source: /apps/website/locales
     translation: /apps/website/locales/%two_letters_code%/%original_file_name%
