chore: improve crowdin pr

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,6 @@
 pull_request_title: "chore: Update Crowdin translations"
 commit_message: "chore(%language%): Update %original_file_name% translation from Crowdin"
+append_commit_message: false
 
 files:
   - source: /apps/website/locales
