--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,10 +24,12 @@
 		"@premid/db": "workspace:*",
 		"@sentry/node": "^8.17.0",
 		"@sentry/tracing": "^7.114.0",
+		"arktype": "2.0.0-beta.0",
 		"fastify": "^4.28.1",
 		"graphql": "^16.9.0",
 		"graphql-parse-resolve-info": "^4.13.0",
 		"graphql-yoga": "^5.6.0",
+		"ioredis": "^5.3.2",
 		"mongoose": "^8.5.1"
 	},
 	"devDependencies": {
