--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,8 @@
 pull_request_title: "chore: Update Crowdin translations"
 commit_message: "chore(%language%): Update %original_file_name% translation from Crowdin"
 append_commit_message: false
+skip_untranslated_strings: true
+skip_untranslated_files: true
 
 files:
   - source: /apps/website/locales
