--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,15 +21,17 @@
 		"@escape.tech/graphql-armor-max-depth": "^2.3.0",
 		"@escape.tech/graphql-armor-max-directives": "^2.2.0",
 		"@escape.tech/graphql-armor-max-tokens": "^2.4.0",
+		"@fastify/websocket": "^10.0.1",
 		"@premid/db": "workspace:*",
 		"@sentry/node": "^8.17.0",
 		"@sentry/tracing": "^7.114.0",
-		"arktype": "2.0.0-beta.0",
+		"arktype": "2.0.0-beta.2",
 		"fastify": "^4.28.1",
 		"graphql": "^16.9.0",
 		"graphql-parse-resolve-info": "^4.13.0",
 		"graphql-yoga": "^5.6.0",
 		"ioredis": "^5.3.2",
+		"ky": "^1.5.0",
 		"mongoose": "^8.5.1"
 	},
 	"devDependencies": {
@@ -37,6 +39,7 @@
 		"@graphql-codegen/schema-ast": "^4.1.0",
 		"@graphql-codegen/typescript": "4.0.9",
 		"@graphql-codegen/typescript-resolvers": "4.2.1",
-		"@parcel/watcher": "^2.4.1"
+		"@parcel/watcher": "^2.4.1",
+		"@types/ws": "^8.5.12"
 	}
 }
