--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,9 @@
 			"path": "./apps/schema-server/tsconfig.app.json"
 		},
 		{
+			"path": "./apps/api-master/tsconfig.app.json"
+		},
+		{
 			"path": "./apps/api/tsconfig.app.json"
 		}
 	],
