chore: update tsconfig

--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"composite": true,
 		"rootDir": "src",
+		"types": ["@ark/schema"],
 		"outDir": "dist"
 	},
 	"include": ["src/**/*"]
