--- a/apps/api-master/package.json
+++ b/apps/api-master/package.json
@@ -14,12 +14,11 @@
 		"dev": "node --watch --env-file .env --enable-source-maps ."
 	},
 	"dependencies": {
+		"@discordjs/rest": "^2.3.0",
 		"@envelop/sentry": "^9.0.0",
 		"@sentry/node": "^8.17.0",
 		"@sentry/tracing": "^7.114.0",
-		"arktype": "2.0.0-beta.2",
 		"cron": "^3.1.7",
-		"ioredis": "^5.3.2",
-		"ky": "^1.5.0"
+		"ioredis": "^5.3.2"
 	}
 }
