--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
 		"codegen": "graphql-codegen --config codegen.ts"
 	},
 	"dependencies": {
+		"@discordjs/rest": "^2.3.0",
 		"@envelop/sentry": "^9.0.0",
 		"@escape.tech/graphql-armor-max-aliases": "^2.5.0",
 		"@escape.tech/graphql-armor-max-depth": "^2.3.0",
@@ -26,12 +27,12 @@
 		"@sentry/node": "^8.17.0",
 		"@sentry/tracing": "^7.114.0",
 		"arktype": "2.0.0-beta.2",
+		"discord-api-types": "^0.37.92",
 		"fastify": "^4.28.1",
 		"graphql": "^16.9.0",
 		"graphql-parse-resolve-info": "^4.13.0",
 		"graphql-yoga": "^5.6.0",
 		"ioredis": "^5.3.2",
-		"ky": "^1.5.0",
 		"mongoose": "^8.5.1"
 	},
 	"devDependencies": {
