--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [pd, schema-server, api, website]
+        target:
+          - pd
+          - schema-server
+          - api-worker
+          - api-master
+          - website
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
