--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Build and push other images
         uses: docker/build-push-action@v6
-        if: matrix.target != 'website' && github.event_name == 'tag'
+        if: matrix.target != 'website' && startsWith(github.ref, 'refs/tags/')
         with:
           push: true
           platforms: linux/amd64,linux/arm64
