--- a/apps/api-master/package.json
+++ b/apps/api-master/package.json
@@ -18,6 +18,10 @@
 		"@envelop/sentry": "^9.0.0",
 		"@sentry/node": "^8.17.0",
 		"cron": "^3.1.7",
+		"debug": "^4.3.6",
 		"ioredis": "^5.3.2"
+	},
+	"devDependencies": {
+		"@types/debug": "^4.1.12"
 	}
 }
