--- a/apps/api-worker/package.json
+++ b/apps/api-worker/package.json
@@ -26,6 +26,7 @@
 		"@premid/db": "workspace:*",
 		"@sentry/node": "^8.17.0",
 		"arktype": "2.0.0-beta.2",
+		"defu": "^6.1.4",
 		"discord-api-types": "^0.37.92",
 		"fastify": "^4.28.1",
 		"graphql": "^16.9.0",
