--- a/apps/api-worker/package.json
+++ b/apps/api-worker/package.json
@@ -23,6 +23,9 @@
 		"@escape.tech/graphql-armor-max-directives": "^2.2.0",
 		"@escape.tech/graphql-armor-max-tokens": "^2.4.0",
 		"@fastify/websocket": "^10.0.1",
+		"@opentelemetry/api": "^1.9.0",
+		"@opentelemetry/exporter-prometheus": "^0.52.1",
+		"@opentelemetry/node": "^0.24.0",
 		"@premid/db": "workspace:*",
 		"@sentry/node": "^8.17.0",
 		"arktype": "2.0.0-beta.2",
