--- a/apps/api-master/package.json
+++ b/apps/api-master/package.json
@@ -22,7 +22,8 @@
 		"@sentry/node": "^8.17.0",
 		"cron": "^3.1.7",
 		"debug": "^4.3.6",
-		"ioredis": "^5.3.2"
+		"ioredis": "^5.3.2",
+		"p-limit": "^6.1.0"
 	},
 	"devDependencies": {
 		"@types/debug": "^4.1.12"
