--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Build and Push website
         uses: docker/build-push-action@v6
-        if: github.ref_type == 'branch'
+        if: matrix.target == 'website'
         with:
           push: true
           platforms: linux/amd64,linux/arm64
@@ -50,14 +50,14 @@ jobs:
           tags: ghcr.io/premid/${{ matrix.target }}:beta-${{ github.sha }}-${{ github.run_number }}
 
       - name: Get package.json version
+        if: matrix.target != 'website'
         id: get_version
-        run: echo ::set-output name=version::$(echo "${GITHUB_REF##*/}" | sed -E 's/^.+-v([0-9]+\.[0-9]+\.[0-9]+)$/\1/')
+        run: echo ::set-output name=version::$(node -p "require('./apps/${{ matrix.target }}/package.json').version")
         shell: bash
-        if: startsWith(github.ref, 'refs/tags/')
 
       - name: Build and push other images
         uses: docker/build-push-action@v6
-        if: startsWith(github.ref, 'refs/tags/')
+        if: matrix.target != 'website' && startsWith(github.ref, 'refs/tags/')
         with:
           push: true
           platforms: linux/amd64,linux/arm64
