feat: update tracing

--- a/apps/api-master/package.json
+++ b/apps/api-master/package.json
@@ -22,6 +22,7 @@
 		"cron": "^3.1.7",
 		"debug": "^4.3.6",
 		"ioredis": "^5.3.2",
+		"ip-location-api": "^1.0.0",
 		"ky": "^1.7.2",
 		"p-limit": "^6.1.0"
 	},
