--- a/apps/api-master/tsconfig.app.json
+++ b/apps/api-master/tsconfig.app.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"composite": true,
 		"rootDir": "src",
+		"types": ["./environment.d.ts"],
 		"outDir": "dist"
 	},
 	"include": ["src/**/*"]
