--- a/apps/api-master/package.json
+++ b/apps/api-master/package.json
@@ -19,9 +19,6 @@
 	},
 	"dependencies": {
 		"@envelop/sentry": "^9.0.0",
-		"@opentelemetry/api": "^1.9.0",
-		"@opentelemetry/exporter-prometheus": "^0.52.1",
-		"@opentelemetry/node": "^0.24.0",
 		"@sentry/node": "^8.17.0",
 		"cron": "^3.1.7",
 		"debug": "^4.3.6",
@@ -30,7 +27,8 @@
 		"ip-location-api": "^1.0.0",
 		"ky": "^1.7.2",
 		"p-limit": "^6.1.0",
-		"postgres": "^3.4.4"
+		"postgres": "^3.4.4",
+		"prom-client": "^15.1.3"
 	},
 	"devDependencies": {
 		"@types/debug": "^4.1.12",
