--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,9 @@
 		},
 		{
 			"path": "./apps/api-worker/tsconfig.app.json"
+		},
+		{
+			"path": "./apps/discord-bot/tsconfig.app.json"
 		}
 	],
 	"files": []
