chore: add to matrix

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -20,6 +20,7 @@ jobs:
           - website
           - api-worker
           - api-master
+          - discord-bot
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
