--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,7 @@ jobs:
           - api-worker
           - api-master
           - website
+          - discord-bot
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
