--- a/apps/discord-bot/package.json
+++ b/apps/discord-bot/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@premid/db": "workspace:*",
+		"@sentry/node": "^8.17.0",
 		"defu": "^6.1.4",
 		"discord.js": "^14.16.2",
 		"glob": "^11.0.0",
