--- a/apps/pd/package.json
+++ b/apps/pd/package.json
@@ -29,8 +29,6 @@
 	},
 	"devDependencies": {
 		"@types/mime-types": "^2.1.4",
-		"@types/node": "^24.10.1",
-		"form-data": "^4.0.0",
-		"typescript": "^5.9.3"
+		"form-data": "^4.0.0"
 	}
 }
